turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:17: error: ';' expected but '(' found.
    var rule:Array[Array[Array[Int]]](2)(2)(3) = null // Change this
                                     ^